service-mesh/observability/expose-dashboards/prometheus.yaml
---
# Source: prometheus/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        component: "server"
        app: prometheus
        release: prometheus
        chart: prometheus-14.3.0
        heritage: Helm
    name: prometheus
    namespace: istio-system
spec:
    ports:
        - name: http
          port: 9090
          protocol: TCP
          targetPort: 9090
    selector:
        component: "server"
        app: prometheus
        release: prometheus
    sessionAffinity: None
    type: "ClusterIP"
---
# Source: prometheus/templates/server/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        component: "server"
        app: prometheus
        release: prometheus
        chart: prometheus-14.3.0
        heritage: Helm
    name: prometheus
    namespace: istio-system
spec:
    selector:
        matchLabels:
            component: "server"
            app: prometheus
            release: prometheus
    replicas: 1
    template:
        metadata:
            annotations:
                sidecar.istio.io/inject: "false"
            labels:
                component: "server"
                app: prometheus
                release: prometheus
                chart: prometheus-14.3.0
                heritage: Helm
        spec:
            serviceAccountName: prometheus
            containers:
                - name: prometheus-server-configmap-reload
                  image: "jimmidyson/configmap-reload:v0.5.0"
                  imagePullPolicy: "IfNotPresent"
                  args:
                      - --volume-dir=/etc/config
                      - --webhook-url=http://127.0.0.1:9090/-/reload
                  resources: {}
                  volumeMounts:
                      - name: config-volume
                        mountPath: /etc/config
                        readOnly: true

                - name: prometheus-server
                  image: "prom/prometheus:v2.26.0"
                  imagePullPolicy: "IfNotPresent"
                  args:
                      - "--web.enable-lifecycle"
                      - "--web.external-url=/prometheus/"
                      - "--web.route-prefix=/"
                      - --storage.tsdb.retention.time=15d
                      - --config.file=/etc/config/prometheus.yml
                      - --storage.tsdb.path=/data
                      - --web.console.libraries=/etc/prometheus/console_libraries
                      - --web.console.templates=/etc/prometheus/consoles
                  ports:
                      - containerPort: 9090
                  readinessProbe:
                      httpGet:
                          path: /-/ready
                          port: 9090
                      initialDelaySeconds: 0
                      periodSeconds: 5
                      timeoutSeconds: 4
                      failureThreshold: 3
                      successThreshold: 1
                  livenessProbe:
                      httpGet:
                          path: /-/healthy
                          port: 9090
                      initialDelaySeconds: 30
                      periodSeconds: 15
                      timeoutSeconds: 10
                      failureThreshold: 3
                      successThreshold: 1
                  resources: {}
                  volumeMounts:
                      - name: config-volume
                        mountPath: /etc/config
                      - name: storage-volume
                        mountPath: /data
                        subPath: ""
            hostNetwork: false
            dnsPolicy: ClusterFirst
            securityContext:
                fsGroup: 65534
                runAsGroup: 65534
                runAsNonRoot: true
                runAsUser: 65534
            terminationGracePeriodSeconds: 300
            volumes:
                - name: config-volume
                  configMap:
                      name: prometheus
                - name: storage-volume
                  emptyDir: {}
