service-mesh/observability/expose-dashboards/dashboards-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: dashboards-gateway
    namespace: istio-system
spec:
    selector:
        istio: ingressgateway # use Istio default gateway implementation
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - "*"
